--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -127,7 +127,7 @@
        <div>
            <form id="comment_form"  method="post">
                {% csrf_token %}
-               <textarea name="content" cols="85" rows="5" maxlength="300" required="" id="id_content" style="border: 2px solid darkgrey;border-radius:6px;font-size:130%;" placeholder="your comments here.."></textarea>
+               <textarea name="content" cols="60" rows="3" maxlength="300" required="" id="cmntcnt" style="border: 2px solid darkgrey;border-radius:6px;font-size:130%;" placeholder="your comments here.."></textarea>
                <button type="submit" class="cmntbtn" style="margin-left:85%;font-size:120%;margin-top:1%">comment</button>
            </form>
        <div id ="comment">
