added recaptcha to login and signup

--- a/feedly/users/templates/base.html
+++ b/feedly/users/templates/base.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <title>Feedly</title>
     <link rel="stylesheet" href="{% static '/css/home.css' %}">
     <link rel="stylesheet" href="{% static '/css/community.css' %} ">
     <link rel="stylesheet" href="{% static '/css/post.css' %}">
