--- a/feedly/static/css/home.css
+++ b/feedly/static/css/home.css
@@ -629,3 +629,11 @@ padding-left:3  %;
 .comment_content{
 white-space: pre-wrap;
 }
+  .dp2{
+    width: -100%;
+    height: -100%;
+  margin-left:15%;
+  margin-top:8%
+    overflow: hidden;
+    border-radius: 100%;
+  }
