--- a/feedly/users/templates/landing.html
+++ b/feedly/users/templates/landing.html
@@ -42,10 +42,10 @@
                 {% for error in messages %}
                 <p style="color: red;margin-left:150px;">{{ error }}</p><br>
                 {% endfor %}
-                <div class="input-container ">
-                <script src='https://www.google.com/recaptcha/api.js'></script>
-                <div class="g-recaptcha" data-sitekey="6Ldi4JoUAAAAADkHu_RcaZiy67p86o-ayAJCHBS1"></div>
-                </div>
+                <!--<div class="input-container ">-->
+                <!--<script src='https://www.google.com/recaptcha/api.js'></script>-->
+                <!--<div class="g-recaptcha" data-sitekey="6Ldi4JoUAAAAADkHu_RcaZiy67p86o-ayAJCHBS1"></div>-->
+                <!--</div>-->
                 <button type="submit" class="btn" style="margin-left: 23%;" >Login</button>
             </div>
             </form>
