--- a/feedly/users/templates/friend_request.html
+++ b/feedly/users/templates/friend_request.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-
+<a href="{% url 'sent_request' %}"><button style="margin-left:80%;margin-top:7%;">View Sent Request</button></a>
 {% for user in friend_request_list %}
 
 <div class="leftcolumn">
