--- a/feedly/users/templates/signup.html
+++ b/feedly/users/templates/signup.html
@@ -74,5 +74,17 @@
             </form>
         <a href="{% url 'landing' %}"><button type="submit" class="cabtn" style="margin-left: 23%;" >Login</button></a>
     </div>
+    <div style="margin-left:18%;">
+        <p style="padding-left:3%;padding-bottom:3%;">------OR-------</p>
+        <a href="{% url 'social:begin' 'google-oauth2' %}">
+            <img src="https://img.icons8.com/color/48/000000/google-logo.png">
+        </a>
+        <a href="{% url 'social:begin' 'facebook' %}" style="padding:1%;">
+            <img src="https://img.icons8.com/color/48/000000/facebook.png">
+        </a>
+        <a href="{% url 'social:begin' 'github' %}">
+            <img src="https://img.icons8.com/color/48/000000/github.png">
+        </a>
+    </div>
 </body>
 </html>
