--- a/users/templates/sent_request.html
+++ b/users/templates/sent_request.html
@@ -1,13 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-<div style="text-align:center;padding-top:100px;">
-    {% if messages %}
-    {% for message in messages %}
-    <p style="text-align:center;margin-top:100px;">{{ message }}</p>
-    {% endfor %}
-    {% endif %}
-</div>
+{% if sent_request %}
 {% for user in sent_request %}
 <div class="leftcolumn">
     <div class="cardpost" style="margin-top:30px; margin-bottom:-80px;margin-left:300px">
@@ -25,4 +19,10 @@
     </div>
 </div>
 {% endfor %}
+{% else %}
+<div class="nopost">
+                <img src="/static/up.svg" alt="sdvfwegg">
+                <h2 style="margin-top:-10%;margin-left:19%;">No New Request sent!!:( </h2>
+            </div>
+            {% endif %}
 {% endblock %}
