--- a/users/static/css/home.css
+++ b/users/static/css/home.css
@@ -636,3 +636,15 @@ white-space: pre-wrap;
     text-decoration:none;
     text-decoration:none;
   }
+  .button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
